--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "aos": "^2.3.4",
     "axios": "^1.3.2",
     "jquery": "^3.6.3",
+    "maska": "^2.1.6",
     "vue": "^3.2.45",
+    "vue-inputmask": "^0.2.1",
     "vue-router": "^4.1.6",
+    "vue-text-mask": "^6.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
