--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.3.2",
-    "inputmask": "^5.0.7",
     "jquery": "^3.6.3",
     "maska": "^2.1.6",
     "vue": "^3.2.45",
-    "vue-inputmask": "^0.2.1",
-    "vue-phone-mask-input": "^1.1.11",
     "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vue-the-mask": "^0.11.1",
+    "libphonenumber-js": "^1.7.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
