--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "aos": "^2.3.4",
     "axios": "^1.3.2",
     "jquery": "^3.6.3",
-    "maska": "^2.1.6",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vuex": "^4.1.0",
-    "vue-the-mask": "^0.11.1",
-    "libphonenumber-js": "^1.7.13"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
